package Lab8;

public interface Colorable {
    void howToColor();
}